--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            			<li>
              			<a href="index.html">Home</a>
             		</li>
-          			<li><a href="about.html">About</a></li>
+          			<li><a href="#">About</a></li>
 					<li/>
           		</ul>
       		</nav>
@@ -271,7 +271,7 @@
           			</div>
           			<div class="sidebar-list-2"> 
           				<div class="dark-mode">
-            				<li><p>Dark Mode</p> </li>           
+            				<li class="Dark1"><p>Dark Mode</p> </li>           
             				<div class="toggle">
               					<div class="circle"></div>
             				</div>
